mule-user-guide/v/3.3/installing-mule-esb-3-and-the-mule-ide.adoc
= 安装Mule ESB 3和Mule IDE

*  <<Installing Mule Enterprise>>
*  <<Installing the Mule Community or Snapshot Release>>
*  <<Installing Multiple Instances>>
*  <<Installing the Mule IDE>>

== 安装Mule Enterprise

[NOTE]
这些说明仅适用于Mule Enterprise。对于社区或快照版本，请跳至下一节。

本节介绍Mule Enterprise的安装。按照下载文件版本的说明进行操作。

=== 安装TAR.GZ

. 如果您下载了TAR.GZ版本的Mule Enterprise，只需将这些文件解压缩到一个目录中即可。你必须使用像WinZip这样的解压缩工具，而不仅仅是内置的Windows提取器。

+
[CAUTION]
不要将Mule安装在包含空格的目录路径中！

. 执行以下操作之一：
* 如果您要使用Mule IDE，请参阅http://mulesoft.com。
* 如果您将使用Maven，请跳过设置您的Maven存储库。
* 否则，请跳到运行Mule的部分。

=== 安装JAR

. 如果您将JAR版本的Mule Enterprise下载到Windows上，请双击该文件以启动安装程序。如果默认情况下Java没有与JAR文件相关联，请打开命令提示符，导航至您下载JAR文件的目录，然后输入以下命令：
+

[source, code, linenums]
----
java -jar mule-enterprise-standalone-installer-<version>.jar
----
+

其中`<version>`是文件名中的版本号。
. 按照安装程序中的说明安装Mule。您还将获得安装Profiler软件包的选项，该软件包可帮助您识别自定义Mule扩展程序中的内存泄漏，以及脚本模块，该模块提供了在Mule中使用脚本语言的功能。
. 当提示您指定安装目录时，请务必指定与您为MULE_HOME环境变量指定的目录相同的目录。
. 如果您将使用Maven，请跳过设置您的Maven存储库。

=== 设置Maven仓库

您现在可以按照以下步骤设置Maven存储库：

. 打开命令提示符并导航到Mule `bin`目录。
. 键入`populate_m2_repo.cmd`，后跟Maven存储库目录的位置（与安装Maven时在`settings.xml`文件中指定的目录相同）。

例如：

----
cd c:\mule\binpopulate_m2_repo.cmd c:\.m2\repository
----

需要执行此步骤才能使用发行版中的本地Mule Enterprise JAR文件填充Maven存储库。请注意，当您将Mule Enterprise-only功能添加到代码中时，必须在使用Maven构建项目之前将正确的依赖关系添加到您的POM。

你已经完成了Mule的安装和设置。

== 安装Mule社区或快照发布

本节介绍在Windows或Linux / UNIX上安装社区或快照发行版。

. 如果您已安装以前的版本，则应在安装更高版本之前删除其安装目录。
. 转到Mule下载页面。
. 点击您要下载的版本旁边的链接。使用`.zip`链接在Windows上进行安装，并使用`.tar.gz`链接在Linux / UNIX上进行安装。最新版本位于页面的顶部。
{/ 0}在Linux / UNIX上，如果您必须通过终端而不是浏览器下载，或者必须下载到没有X-Windows的远程计算机，请使用`wget`。例如，要使用`wget`下载Mule 2.0.1快照，请在一行上输入以下命令：
+

----
wget http://snapshots.dist.codehaus.org/mule/org/mule/distributions/mule-full/2.0.1-SNAPSHOT/mule-full-2.0.1-SNAPSHOT.tar.gz
----

. 下载发行版后，将其中的文件解压缩到安装目录中。例如，在Linux / UNIX上，您将切换到安装目录，然后输入以下命令：
+

----
tar -xvzf mule-full-2.0.1-SNAPSHOT.tar.gz
----

+
[CAUTION]
不要将Mule安装在包含空格的目录路径中！

== 安装多个实例

要在同一台计算机上安装Mule的多个实例，只需将上述分发存档解压缩到其他位置即可。

Mule 3不再支持在多个实例之间共享Mule安装目录。

== 安装Mule IDE

从 link:https://www.mulesoft.com/platform/studio[这里]下载最新的Mule IDE。解压缩文件并打开Studio应用程序。如果您想重新安装旧版本的Mule Studio，请联系MuleSoft支持。

